test/ui/redefinition-of-intrinsic-binding.lushui
# TEST compiler-args --no-core -Z internals

@intrinsic
data Type: Type

@intrinsic
data Text: Type

@(intrinsic text.concat)
join: Text -> Text -> Text

module disambiguator of
    @intrinsic
    data Text: topmost.Type

module text of
    use topmost.Text

    @intrinsic
    concat: Text -> Text -> Text
